--- a/nlp.html
+++ b/nlp.html
@@ -191,7 +191,7 @@ of the job details and apply today!</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-09-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/babylon-health/job/nlp-software-engineer/02ebe764cf46613e74f7555d3310dbb5/'>NLP Software Engineer at Babylon Health</a></h5> 
+<h5><a href='https://snap.hr/babylon-health/job/nlp-software-engineer/02ebe764cf46613e74f7555d3310dbb5/'>NLP Software Engineer at Babylon Health</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-09-28</p>
 <hr/>
@@ -252,7 +252,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/homex/e4fb25af-1a3c-4232-b0b0-3015403c219b'>HomeX - NLP Research Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/homex/e4fb25af-1a3c-4232-b0b0-3015403c219b'>HomeX - NLP Research Engineer</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
@@ -282,7 +282,7 @@ and right place, underpinned by a multi-layered data-driven approach. Knorex?...
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-09-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
+<h5><a href='https://idana.join.com/jobs/353599-research-software-engineer-ml-und-nlp-in-ehealth-w-m-d'>Research Software Engineer - ML & NLP in eHealth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>vor 21 Stunden ... Tomes GmbH has a job opening for Research Software Engineer - ML & NLP in 
 eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?...</p>
@@ -297,7 +297,7 @@ eHealth (w/m/d) in Freiburg im Breisgau (published: 05.09.2019). Apply now or?..
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
+<h5><a href='https://jobs.lever.co/cardinalhire/136e4a29-f597-40eb-b7eb-18b884392a09'>Stealth Startup - Natural Language Processing Engineer - up to $190,000</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -338,7 +338,7 @@ que?...</p>
 <p>Aug 26, 2019 ... Hands-on working experience in deep NLP Learning algorithms experiences in 
 unstructured text data analysis across industries. Added advantage would be?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
+<h5><a href='https://boards.greenhouse.io/instabase/jobs/4201269002'>Job Application for Software Engineer - Natural Language Processing (NLP) at Instabase</a></h5> 
 <p><span class="badge badge-light">San Francisco, CANew York, NYBoston, MA</span></p>
 <p>Posted on: 2019-09-01</p>
 <hr/>
@@ -429,7 +429,7 @@ in Barcelona. Review all of the job details and apply today!</p>
 <p>6 days ago ... Some of the research projects can involve parsing, language modelling, machine 
 translation, sentiment analysis, recommendation systems, deep learning,?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/gumgum/job/oTTpafw5'>GumGum Careers - NLP Data Scientist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/gumgum/job/oTTpafw5'>GumGum Careers - NLP Data Scientist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 2, 2019 ... Description. Using state-of-the-art machine learning and big data techniques, 
 GumGum enables highly impactful digital advertising campaigns with contextual
